@@ -11,4 +11,4 @@ Besides this, the kijk.nl channel was updated to use the new GraphQL backend and
 _None_
 
 [B]Channel related[/B]
-_None_
+* Fixed: Kijk.nl PersistedQueries seem unstable
